--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --configuration production",
+    "start:stag": "ng serve --configuration staging",
     "build": "ng build",
     "test": "ng test",
     "lint": "npx eslint 'src/**/*.{js,ts}' --quiet --fix",
