--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --configuration production",
     "start:stag": "ng serve --configuration staging",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "test": "ng test",
     "lint": "npx eslint 'src/**/*.{js,ts}' --quiet --fix",
     "e2e": "ng e2e",
