--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "^13.4.0",
     "@angular/platform-browser-dynamic": "^13.4.0",
     "@angular/router": "^13.4.0",
-    "@cruglobal/godtools-shared": "^0.9.0-SNAPSHOT.1241",
+    "@cruglobal/godtools-shared": "0.9.0-SNAPSHOT.1263",
     "@rails/actioncable": "^6.1.3",
     "core-js": "^2.5.4",
     "eslint-config-prettier": "^8.8.0",
