--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "~13.3.11",
     "@angular/animations": "^13.4.0",
     "@angular/common": "^13.4.0",
     "@angular/compiler": "^13.4.0",
@@ -23,12 +22,14 @@
     "@angular/platform-browser": "^13.4.0",
     "@angular/platform-browser-dynamic": "^13.4.0",
     "@angular/router": "^13.4.0",
+    "@cruglobal/godtools-shared": "0.9.0",
     "@rails/actioncable": "^6.1.3",
     "core-js": "^2.5.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "ng-lottie": "^0.3.2",
+    "lottie-web": "5.9.6",
+    "ngx-lottie": "8.3.0",
     "ngx-toastr": "13.2.1",
     "rxjs": "^6.6.7",
     "ts-clipboard": "^1.0.17",
@@ -36,6 +37,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~13.3.11",
     "@angular-eslint/builder": "15.2.1",
     "@angular-eslint/eslint-plugin": "15.2.1",
     "@angular-eslint/eslint-plugin-template": "15.2.1",
